--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "http-status-code-constraints"
-version = "0.1.0"
-description = "Constraining LLMs to generate valid HTTP status codes using FSMs"
+name = "latex-math-fsm-constraints"
+version = "0.3.0"
+description = "Constraining LLMs to generate valid LaTeX mathematical expressions using FSMs"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
