--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# LaTeX Math FSM - Environment Configuration
+# ==========================================
+
 # Groq API Configuration
 # Get your API key from: https://console.groq.com/keys
 GROQ_API_KEY=your_groq_api_key_here
@@ -8,4 +11,8 @@ GROQ_DEFAULT_MODEL=llama3-8b-8192
 # Optional: Default configuration
 MAX_TOKENS=512
 TEMPERATURE=0.7
+
+# Streamlit Configuration (optional)
+# STREAMLIT_SERVER_PORT=8501
+# STREAMLIT_SERVER_ADDRESS=localhost
 MAX_RETRIES=3
