--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ requires-python = ">=3.11"
 dependencies = [
     "groq>=0.4.0",
     "python-dotenv>=1.0.0",
+    "torch>=2.0.0",
+    "transformers>=4.36.0",
+    "accelerate>=0.25.0",
+    "huggingface-hub>=0.19.0",
     "streamlit>=1.28.0",
     "plotly>=5.17.0",
     "pandas>=2.0.0",
