--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,12 @@
 groq>=0.4.0
 python-dotenv>=1.0.0
 
+# Local LLM dependencies
+torch>=2.0.0
+transformers>=4.36.0
+accelerate>=0.25.0
+huggingface-hub>=0.19.0
+
 # Web interface dependencies
 streamlit>=1.28.0
 plotly>=5.17.0
